--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.babel.js --watch --mode development"
+    "build": "webpack --config webpack.config.babel.js --watch --mode development",
+    "deploy": "webpack --config webpack.config.babel.js --mode production"
   },
   "repository": {
     "type": "git",
