--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "webpack-dev-server --mode development",
     "build": "webpack --config webpack.config.babel.js --watch --mode development",
     "deploy": "webpack --config webpack.config.babel.js --mode production"
   },
@@ -32,7 +33,8 @@
     "babel-register": "^6.26.0",
     "path": "^0.12.7",
     "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
