--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "webpack-dev-server --mode development",
+    "start:dev": "webpack --watch --mode development & webpack-dev-server --inline --progress --colors --mode development",
     "build": "webpack --config webpack.config.babel.js --watch --mode development",
     "deploy": "webpack --config webpack.config.babel.js --mode production"
   },
